@@ -2,43 +2,39 @@ package com.red_badger.marsbot;
 
 import com.red_badger.marsbot.util.FileReaderUtil;
 import com.red_badger.marsbot.util.StringUtil;
-import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
 
 @SpringBootApplication
-public class MarsBotApplication {
+public final class MarsBotApplication {
 
 	public static void main(String[] args) {
 		//SpringApplication.run(MarsBotApplication.class, args);
-		MarsBotApplication app= new MarsBotApplication(args);
+		new MarsBotApplication(args);
 	}
 
 	public MarsBotApplication(String[] args) {
-		//System.out.println("Mars Bot Application Running ...");
 		if(args.length > 0) {
-//			System.out.println("using:");
-//			for (int i = 0; i < args.length; i++) {
-//				System.out.println(args[i]);
-//			}
+			// Debug runtime Arguments
+			//System.out.println("Running MarsBotApplication using:");
+			//for (int i = 0; i < args.length; i++) {
+			//	System.out.println(args[i]);
+			//}
 
-			ArrayList<String> fileContent = null;
+			ArrayList<String> fileContent;
 			try{
 				fileContent = FileReaderUtil.ReadFile(args[0]);
 				int fileContentSize = fileContent.size();
 				if(fileContentSize > 1){
 
 					//Resolve a given dimention string into X, y for simple map creation
-					int[] mapSize = StringUtil.StringToIntArray(fileContent.get(0));
+					int[] mapSize = StringUtil.StringToIntArray(fileContent.getFirst());
 					// Create map base on first line dimensions
 					Map map = createMap(mapSize[0], mapSize[1]);
 
-
+					// create and process bot commands
 					int botCount = 1;
 					while(botCount+2 <= fileContentSize ){
 						BotOrientation orientation = StringUtil.StringToBotOrientation(fileContent.get(botCount));
@@ -47,7 +43,7 @@ public class MarsBotApplication {
 						bot.updateLocation(map, location);
 						processBot(map, bot, fileContent.get(botCount+1));
 						// Final Bot report
-						System.out.println(bot.toString());
+						System.out.println(bot);
 						botCount+=2;
 					}
 				}
@@ -61,13 +57,11 @@ public class MarsBotApplication {
 	}
 
 	public Map createMap(int x, int y) {
-		Map map = new Map(x, y);
-		//System.out.println("map="+ map.toString());
-		return map;
+        return new Map(x, y);
 	}
 
 	private static void processBot(Map map, Bot bot, String commandString) {
-		//System.out.println("Start map="+ map.toString());
+		//System.out.println("processBot map="+ map.toString());
 		//System.out.println("bot="+ bot.toString());
 		//System.out.println("commandString="+ commandString);
 		for (int i = 0; i < commandString.length() && !bot.getOrientation().isLost(); i++) {
@@ -76,23 +70,20 @@ public class MarsBotApplication {
 	}
 
 	private static void processBot(Map map, Bot bot, char commandChar) {
-		//System.out.println("commandString="+ commandChar);
+		//System.out.println("processBot commandChar="+ commandChar);
 		switch (commandChar){
 			case 'F':
-				//System.out.println("Move Forward");
 				bot.moveForward(map);
 				break;
 			case 'L':
-				//System.out.println("Turn Left");
 				bot.turnLeft();
 				break;
 			case 'R':
-				//System.out.println("Turn Right");
 				bot.turnRight();
 				break;
+			// ADD NEW COMMAND PROCESSING HERE
 			default:
 				System.out.println("processBot unknown command "+ commandChar);
 		}
-		//System.out.println("map="+ map.toString());
 	}
 }
